# xiangqi-coach

./: AGENTS.md  PRD v0.1.md  README.md  index.html  pyproject.toml  v1.0.0.md  v1.0.0功能需求说明.md  各版本目标.md
.github/: pull_request_template.md
frontend/: index.html
src/: xiangqi_cli_demo.py
src/xiangqi_core/: __init__.py  attack.py  board.py  coord.py  errors.py  game.py  legality.py  move.py  piece.py  rules.py  types.py
tests/: test_attack.py  test_board.py  test_cli_demo.py  test_coord.py  test_legality.py  test_move.py  test_rules.py  test_smoke.py  test_types.py
