[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiangqi-core"
version = "1.0.0"
description = "Core rules engine for Xiangqi (Chinese Chess) v1.0.0"
requires-python = ">=3.10"
authors = [{ name = "Xiangqi Coach Team" }]
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
